--- a/MumbleSharp/MumbleSharp.csproj
+++ b/MumbleSharp/MumbleSharp.csproj
@@ -58,6 +58,7 @@ For more info on Mumble please visit https://www.mumble.info/</Description>
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Concentus" Version="1.1.7" />
     <PackageReference Include="NAudio.WinMM" Version="2.1.0" />
     <PackageReference Include="protobuf-net" Version="2.4.7" />
   </ItemGroup>
